--- a/src/app/dashboard/dishes/dishes.component.html
+++ b/src/app/dashboard/dishes/dishes.component.html
@@ -14,7 +14,7 @@
 
       <tr class="table-body-row">
         <td class="table-body-data w-3/12">
-          <img class="rounded-tl-md rounded-tr-md shadow-md"
+          <img class="table-img"
                src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Zm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
                alt="salmon bowl" />
         </td>
@@ -36,7 +36,7 @@
 
       <tr class="table-body-row">
         <td class="table-body-data w-3/12">
-          <img class=""
+          <img class="table-img -rotate-90"
                src="https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8YXNpYW4lMjBmb29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
                alt="dumpling" />
         </td>
@@ -58,7 +58,7 @@
 
       <tr class="table-body-row">
         <td class="table-body-data w-3/12">
-          <img class=""
+          <img class="table-img"
                src="https://images.unsplash.com/photo-1555126634-323283e090fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8YXNpYW4lMjBmb29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
                alt="Curry soup" />
         </td>
@@ -80,7 +80,7 @@
 
       <tr class="table-body-row">
         <td class="table-body-data w-3/12">
-          <img class=""
+          <img class="table-img"
                src="https://images.unsplash.com/photo-1602253057119-44d745d9b860?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGFzaWFuJTIwZm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
                alt="Terriyaki wings" />
         </td>
@@ -107,7 +107,7 @@
   <!-- Desktop Responsive End -->
 
   <!-- Mobile Responsive Start -->
-  <div class="flex justify-center items-center">
+  <!-- <div class="flex justify-center items-center">
     <div class="sm:hidden flex flex-col justify-start items-start">
       <div class="px-4 lg:px-10 2xl:px-20 flex flex-row justify-start items-end space-x-4">
         <p class="text-4xl font-semibold leading-9 text-gray-800 dark:text-white">Favourites</p>
@@ -229,4 +229,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
