--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,12 +1,17 @@
-<!-- SECTION BREAK  -->
-<ul
-    [ngClass]="status ? 'sidebar-menu-expand' : 'sidebar-menu-close'">
-  <!-- <div class="sidebar-menu-header"> -->
-  <h2 class="menu-header">dashboard</h2>
-  <!-- </div> -->
+<ul>
 
+  <!-- MENU TITLE  -->
+  <h2 class="menu-header">dashboard</h2>
+
+  <!-- MENU BODY -->
   <div class="sidebar-menu-body">
-    <li class="sidebar-menu-li">
+
+    <!-- MENU LINKS -->
+
+    <li class="sidebar-menu-li"
+        routerLinkActive="sidebar-menu-active"
+        routerLink="dashboard">
+
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
            stroke="currentColor"
            className="w-6 h-6">
@@ -14,9 +19,13 @@
               d="M7.5 14.25v2.25m3-4.5v4.5m3-6.75v6.75m3-9v9M6 20.25h12A2.25 2.25 0 0020.25 18V6A2.25 2.25 0 0018 3.75H6A2.25 2.25 0 003.75 6v12A2.25 2.25 0 006 20.25z" />
       </svg>
 
-      <a class="sidebar-menu-label" routerLink="dashboard">overview</a>
+      <a class="sidebar-menu-label">overview</a>
     </li>
-    <li class="sidebar-menu-li">
+
+    <li class="sidebar-menu-li"
+        routerLinkActive="sidebar-menu-active"
+        routerLink="/dashboard/restaurants">
+
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
            stroke="currentColor"
            className="w-6 h-6">
@@ -24,10 +33,13 @@
               d="M13.5 21v-7.5a.75.75 0 01.75-.75h3a.75.75 0 01.75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349m-16.5 11.65V9.35m0 0a3.001 3.001 0 003.75-.615A2.993 2.993 0 009.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 002.25 1.016c.896 0 1.7-.393 2.25-1.016a3.001 3.001 0 003.75.614m-16.5 0a3.004 3.004 0 01-.621-4.72L4.318 3.44A1.5 1.5 0 015.378 3h13.243a1.5 1.5 0 011.06.44l1.19 1.189a3 3 0 01-.621 4.72m-13.5 8.65h3.75a.75.75 0 00.75-.75V13.5a.75.75 0 00-.75-.75H6.75a.75.75 0 00-.75.75v3.75c0 .415.336.75.75.75z" />
       </svg>
 
-      <label class="sidebar-menu-label" routerLink="/dashboard/restaurants">restaurants</label>
+      <a class="sidebar-menu-label">restaurants</a>
     </li>
 
-    <li class="sidebar-menu-li">
+    <li class="sidebar-menu-li"
+        routerLinkActive="sidebar-menu-active"
+        routerLink="/dashboard/dishes">
+
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
            stroke="currentColor"
            className="w-6 h-6">
@@ -35,21 +47,27 @@
               d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
       </svg>
 
-      <label class="sidebar-menu-label" routerLink="/dashboard/dishes">dishes</label>
+      <a class="sidebar-menu-label">dishes</a>
     </li>
-    <li class="sidebar-menu-li">
+
+    <li class="sidebar-menu-li"
+        routerLinkActive="sidebar-menu-active"
+        routerLink="/dashboard/profile ">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 11C14.2091 11 16 9.20914 16 7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7C8 9.20914 9.79086 11 12 11Z"
               stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
         <path d="M6 21V19C6 17.9391 6.42143 16.9217 7.17157 16.1716C7.92172 15.4214 8.93913 15 10 15H14C15.0609 15 16.0783 15.4214 16.8284 16.1716C17.5786 16.9217 18 17.9391 18 19V21"
               stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
-      <label class="sidebar-menu-label">profile</label>
+      <a class="sidebar-menu-label">profile</a>
     </li>
+
   </div>
 
+  <!-- MENU FOOTER -->
   <div class="sidebar-menu-footer">
-    <div></div>
+
+    <!-- MENU FOOTER ITEM -->
     <div class="sidebar-menu-footer-item">
       <li class="sidebar-menu-li">
         <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
@@ -63,4 +81,5 @@
       </li>
     </div>
   </div>
+
 </ul>
