--- a/src/app/dashboard/dishes/dishes.component.scss
+++ b/src/app/dashboard/dishes/dishes.component.scss
@@ -28,6 +28,10 @@
   @apply flex-initial items-center justify-center whitespace-normal break-words px-2 leading-6;
 }
 
+.table-img {
+  @apply h-3/4 w-3/4 rounded-tl-md rounded-tr-md shadow-md;
+}
+
 .format-data {
   @apply capitalize;
 }
