--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -1,35 +1,17 @@
-/* .sidebar-menu-expand {
-  background-color: ghostwhite;
-  @apply sticky top-20 flex h-[calc(100vh-80px)] w-full translate-x-0 transform flex-col items-start justify-start rounded border-r border-b border-gray-200 transition duration-500  ease-in-out sm:w-64;
-} */
-
-/* .sidebar-menu {
-  background-color: ghostwhite;
-  @apply sticky top-20 flex h-[calc(100vh-80px)] flex-col;
-} */
-
-/* .sidebar-menu-close {
-  @apply flex h-full  w-full -translate-x-full transform flex-col items-start justify-start rounded border-r border-b border-gray-200 transition  duration-500 ease-in-out sm:w-64;
-} */
-
-/* .sidebar-menu-header {
-  @apply w-full shrink-0 items-center justify-start space-x-3 border-b border-gray-200 px-6 py-4;
-} */
-
-/* .sidebar-menu-title {
-  @apply text-xl uppercase leading-6 text-gray-800;
-} */
-
 .menu-header {
   @apply w-full border-b border-solid border-gray-400 py-4 pt-2 pl-4 text-xl uppercase leading-6 text-gray-800;
 }
 
 .sidebar-menu-body {
-  @apply mt-6 flex h-full w-full flex-col items-center justify-start space-y-3 px-4 pb-5;
+  @apply mt-4 flex h-full w-full flex-col items-center justify-start space-y-3 px-4 pb-5;
 }
 
 .sidebar-menu-li {
   @apply flex w-full items-center justify-start space-x-2 rounded py-1 pl-4 text-gray-800 hover:bg-indigo-700 hover:text-white focus:bg-indigo-700 focus:text-white focus:outline-none;
+}
+
+.sidebbar-menu-active {
+  @apply flex w-full items-center justify-start space-x-2 rounded bg-indigo-700 py-1 pl-4;
 }
 
 .sidebar-menu-footer {
