--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,4 +1,5 @@
-<input [formControl]="control" [type]="type"
+<input [formControl]="control"
+       [type]="type"
        class="input input-effect"
        [placeholder]="placeholder"
        [mask]="format"
