--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -8,7 +8,7 @@
 
         <!-- <pre>{{loginForm.value | json }}</pre> -->
 
-        <button [ngClass]="loginForm.invalid ? 'btn' : 'btn btn-effect'"
+        <button [ngClass]="loginForm.invalid ? 'btn-default' : 'btn-default btn-effect'"
                 [disabled]="loginForm.invalid">Login</button>
 
         <a class="forgot" (click)="show()">Forgot password</a>
@@ -17,9 +17,13 @@
 <form [ngClass]="{'form': isHidden, 'hide': !isHidden}"
       [formGroup]="forgotForm"
       (ngSubmit)="forgot()">
+
+        <p class="text-red-400 py-1">{{message}}</p>
         <app-input class="input-wrap" [control]="userName" placeholder="Email / UserName"></app-input>
-        <button [ngClass]="forgotForm.invalid ? 'btn' : 'btn btn-effect'"
-                [disabled]="forgotForm.invalid">Reset </button>
+
+        <button [ngClass]="forgotForm.invalid ? 'btn-default' : 'btn-default btn-effect'"
+                [disabled]="forgotForm.invalid">Reset</button>
+
         <a class="forgot" (click)="show()">Go back to login</a>
 
 </form>
