--- a/src/app/restaurant/restaurant-table-row/restaurant-table-row.component.html
+++ b/src/app/restaurant/restaurant-table-row/restaurant-table-row.component.html
@@ -1,30 +1,40 @@
 <!-- TABLE ROWS -->
-<tr class="tr-body">
+<tr class="tr-body" *ngFor="let restaurant of restaurants">
+  <!-- <pre> {{restaurant | json }} </pre> -->
   <td class="td-body-data w-1/12">
     <input type="checkbox" class="td-checkbox"
            onclick="tableInteract(this)" />
   </td>
   <td class="td-body-data w-3/12">
     <div class="td-image-wrap">
-      <img class="w-4/12 rounded-tl-lg rounded-br-lg shadow-md"
+      <!-- <img class="w-4/12 rounded-tl-lg rounded-br-lg shadow-md"
            src="https://plus.unsplash.com/premium_photo-1665669263531-cdcbe18e7fe4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1825&q=80"
-           alt="UX Food & Festival" />
+           alt="UX Food & Festival" /> -->
+
+      <img class="w-4/12 rounded-tl-lg rounded-br-lg shadow-md"
+           src={{restaurant.photos[0].photoUrl}}
+           alt={{restaurant.photos[0].name}} />
+
       <div class="w-8/12 pl-4">
+        {{restaurant.name}}
         UX food &amp; festival
       </div>
     </div>
   </td>
   <td class="td-body-data w-4/12 ">
-    777 festival Lane, Festival City, Festive, 77777
+    <!-- 777 festival Lane, Festival City, Festive, 77777 -->
+    {{restaurant.address | json}}
   </td>
   <td class="td-body-data w-1/12">
-    777-7777
+    <!-- 777-7777 -->
+    {{restaurant.phone}}
   </td>
   <td class="td-body-data w-1/12 td-body-align-center">
     $13,000
   </td>
   <td class="td-body-data w-2/12 td-body-align-center">
-    <button class="btn-edit btn-effect">
+    <button class="btn-edit btn-effect"
+            routerLink="['/dashboard/restaurant/edit', restaurant.id]">
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
            strokeWidth={1.5}
            stroke="currentColor" className="w-6 h-6">
@@ -33,15 +43,15 @@
       </svg>
     </button>
 
-    <button class="btn-delete btn-effect">
+    <button class="btn-delete btn-effect"
+            routerLink="['/restaurant/delete', restaurant.id]">
       <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/compact_table_with_actions_and_select-svg5.svg"
            alt="delete">
     </button>
   </td>
 </tr>
 
-
-<tr class="tr-body">
+<!-- <tr class="tr-body">
   <td class="td-body-data w-1/12">
     <input type="checkbox" class="td-checkbox"
            onclick="tableInteract(this)" />
@@ -121,4 +131,4 @@
            alt="delete">
     </button>
   </td>
-</tr>
+</tr> -->
