--- a/src/app/restaurant/restaurants/restaurants.component.html
+++ b/src/app/restaurant/restaurants/restaurants.component.html
@@ -8,7 +8,14 @@
 
     <!-- TABLE HEAD -->
     <thead class="w-full">
-      <app-restaurant-table-header></app-restaurant-table-header>
+      <tr tabindex="0" class="tr-head">
+        <th class="tr-head-title w-1/12">id</th>
+        <th class="tr-head-title w-3/12">restaurant</th>
+        <th class="tr-head-title w-4/12">address</th>
+        <th class="tr-head-title w-1/12">phone</th>
+        <th class="tr-head-title w-1/12 justify-center flex">revenue</th>
+        <th class="tr-head-title w-2/12 justify-center flex">actions</th>
+      </tr>
     </thead>
 
     <!-- TABLE BODY  -->
