--- a/src/app/restaurant/restaurants/restaurants.component.scss
+++ b/src/app/restaurant/restaurants/restaurants.component.scss
@@ -5,3 +5,7 @@
 .table-main {
   @apply flex w-full flex-col whitespace-nowrap;
 }
+
+.tr-head {
+  @apply flex h-16 w-full flex-row items-center justify-items-start text-sm leading-3 focus:outline-none;
+}
