--- a/src/app/restaurant/restaurants/restaurants.component.html
+++ b/src/app/restaurant/restaurants/restaurants.component.html
@@ -7,7 +7,7 @@
   <table class="table-main">
 
     <!-- TABLE HEAD -->
-    <thead class="w-full">
+    <thead class="w-full underline">
       <tr tabindex="0" class="tr-head">
         <th class="tr-head-title w-1/12">id</th>
         <th class="tr-head-title w-3/12">restaurant</th>
@@ -20,7 +20,57 @@
 
     <!-- TABLE BODY  -->
     <tbody class="w-full">
-      <app-restaurant-table-row></app-restaurant-table-row>
+      <ng-container *ngFor="let restaurant of ( restaurants$ | async )">
+
+        <!-- TABLE ROWs -->
+        <tr class="tr-body">
+          <td class="td-body-data w-1/12">
+            <input type="checkbox" class="td-checkbox" />
+          </td>
+          <td class="td-body-data w-3/12">
+            <div class="td-image-wrap">
+
+              <img class="w-4/12 rounded-tl-lg rounded-br-lg shadow-md"
+                   src={{restaurant.photos[0].photoUrl}}
+                   alt={{restaurant.photos[0].name}} />
+
+              <div class="w-8/12 pl-4">
+                {{restaurant.name}}
+              </div>
+            </div>
+          </td>
+          <td class="td-body-data w-4/12 ">
+            {{ formatAddress(restaurant.address) }}
+          </td>
+          <td class="td-body-data w-1/12">
+            {{restaurant.phone}}
+          </td>
+          <td class="td-body-data w-1/12 td-body-align-center">
+            $13,000
+          </td>
+          <td class="td-body-data w-2/12 td-body-align-center">
+            <button class="btn-edit btn-effect"
+                    routerLink="['/dashboard/restaurant/edit', restaurant.id]">
+              <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                   strokeWidth={1.5}
+                   stroke="currentColor" className="w-6 h-6">
+                <path strokeLinecap="round" strokeLinejoin="round"
+                      d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+              </svg>
+            </button>
+
+            <button class="btn-delete btn-effect"
+                    routerLink="['/restaurant/delete', restaurant.id]">
+              <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/compact_table_with_actions_and_select-svg5.svg"
+                   alt="delete">
+            </button>
+          </td>
+
+          <!-- <pre> {{restaurant | json }} </pre> -->
+        </tr>
+
+        <ng-content></ng-content>
+      </ng-container>
     </tbody>
   </table>
 </section>
